2005-06-27  Owen Fraser-Green  <owen@discobabe.net>

	* gst/realmedia/rmdemux.c: Rewrote to use gstadapter. Also parses
	audio and video header packets for known properties.

2005-06-23  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtsp_proto_get_type),
	(gst_rtspsrc_class_init), (gst_rtspsrc_create_stream),
	(gst_rtspsrc_add_element), (gst_rtspsrc_set_state),
	(gst_rtspsrc_stream_setup_rtp),
	(gst_rtspsrc_stream_configure_transport), (find_stream),
	(gst_rtspsrc_loop), (gst_rtspsrc_open), (gst_rtspsrc_play),
	(gst_rtspsrc_change_state):
	* gst/rtsp/rtspurl.c: (rtsp_url_parse):
	Make rtspsrc a live source.
	Don't try to parse NULL urls.

2005-06-23  Wim Taymans  <wim@fluendo.com>

	* gst/udp/gstudpsrc.c: (gst_udpsrc_init):
	Make udpsrc a live source.

2005-06-02  Wim Taymans  <wim@fluendo.com>

	* gst/udp/Makefile.am:
	Use versioned net lib.

2005-06-02  Wim Taymans  <wim@fluendo.com>

	* gst/udp/Makefile.am:
	Fix hack in makefile.

2005-06-02  Andy Wingo  <wingo@pobox.com>

	* ext/mad/gstid3tag.c: Finish porting to 0.9: no more gstdata,
	check for link functions before calling them, give
	gst_message_new_tag its own copy of the tag list, set the parser
	state before sending the event (because in 0.9 events are
	processed immediately), casting fixes.

	* ext/mad/Makefile.am (libgstmad_la_LDFLAGS): Link with
	gsttagedit.

2005-06-02  Wim Taymans  <wim@fluendo.com>

	* gst/udp/Makefile.am:
	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_get_type),
	(gst_multiudpsink_base_init), (gst_multiudpsink_class_init),
	(gst_multiudpsink_init), (gst_multiudpsink_finalize),
	(gst_multiudpsink_get_times), (gst_multiudpsink_render),
	(gst_multiudpsink_set_property), (gst_multiudpsink_init_send),
	(gst_multiudpsink_add), (client_compare), (free_client),
	(gst_multiudpsink_remove), (gst_multiudpsink_clear),
	(gst_multiudpsink_get_stats):
	* gst/udp/gstudpsrc.c: (gst_udpsrc_get_type),
	(gst_udpsrc_base_init), (gst_udpsrc_class_init),